part3,part1,conclusion

--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -8,10 +8,14 @@
 
 Основные результаты работы заключаются в следующем.
 %\input{common/concl}
-%И какая-нибудь заключающая фраза.
 
-В заключение автор
-выражает благодарность и большую признательность научному руководителю
-Альтману~Е.\:А. за поддержку, помощь, обсуждение результатов и~научное
-руководство. Также автор благодарит заведующего кафедрой <<Автоматика и системы управления>> Малютина~А.\:Г. и старшего преподавателя Александрова~А.\:В.
+1. Выведена формула для нахождения границы Крамера-Рао при применении оконной функции, которая позволяет повысить эффективность научных исследований различных алгоритмов обработки сигналов с применением оконных функций, заменив моделирование алгоритма с применением различных окон расчетом по предложенной формуле.
+
+2.	Предложенный численный метод, вместе с его быстрой реализацией, позволяют повысить точность и достоверность результатов измерительных приборов для электрических сетей. Численный метод позволяет находить оптимальную несмещенную оценку параметров гармоник.
+
+3.	Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе: программа прямого корреляционного метода с использование быстрых алгоритмов обработки сигналов, оценка дисперсии белого шума после наложения на него окна, оценка амплитуды при использовании различных окон, оценка амплитуды при различныз уровнях шума, алгоритм вычисления одномерной свертки.
+
+4. Произвели обзор методов интерпорилрования спектра: метод Якобсена, два метода Квина, два метода Маклеода, метод Грэндка, алгоритм параболической интерполяции, алгоритм интерполяции Гаусса, алгоритм, рекомендованный в ГОСТ $30804.4.7-2013$, метод корреляционныход  функций, Модернизированный метод корреляционных функций.   
+
+В заключение автор выражает благодарность и большую признательность научному руководителю Альтману~Е.\:А. за поддержку, помощь, обсуждение результатов и~научное руководство. Также автор благодарит заведующего кафедрой <<Автоматика и системы управления>> Малютина~А.\:Г. и старшего преподавателя Александрова~А.\:В.
 
