--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -172,7 +172,13 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 
 где $- \frac{M}{2} < i < \frac{M}{2}$, $0 < \bigtriangleup r_j < 1$
 
-На рисунке \textbf{?} показан пример построения наборов эталонов (здесь представлено три набора). Первый набор не имеет смещения относительно базовой точки. Второй набор смещен влево относительно базовой точки на величину шага формирования эталона $h$  . Третий набор смещен вправо относительно базовой точки B на величину шага формирования эталона $h$. Также для первого набора эталона определены его отсчеты БПФ. 
+На рисунке \ref{img:set_of_standards} показан пример построения наборов эталонов (здесь представлено три набора). Первый набор не имеет смещения относительно базовой точки. Второй набор смещен влево относительно базовой точки на величину шага формирования эталона $h$  . Третий набор смещен вправо относительно базовой точки B на величину шага формирования эталона $h$. Также для первого набора эталона определены его отсчеты БПФ. 
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.6] {set_of_standards.pdf}
+	\caption{Пример построения набора эталонов.}
+	\label{img:set_of_standards}
+\end{figure}
 
 Пусть имеется напряжение $u'(t)$ с периодом $T_s$ и спектром, ограниченным  $N$-ой гармоникой, и белым шумом $\eta$. Для ограничения длительности напряжения накладывается некоторое окно $w(t)$, имеющее отличное от нуля значение на временном отрезке $[- \frac{T_w}{T_w}, - \frac{T_w}{T_w}] $ и спектром $W(\omega)$. 
 
@@ -285,7 +291,7 @@ $$
 Граф-схема алгоритма метода корреляционных функций приведена на \ref{img:picture55}
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {GSA_Cor_fanc}
+	\includegraphics [scale=1.3] {GSA_Cor_fanc}
 	\caption{ГСА метода корреляционных функций.}
 	\label{img:picture55}
 \end{figure}
@@ -1344,8 +1350,52 @@ $C_{n}$ может быть записана:
 	\label{img:spectrum_double_interpolated}
 \end{figure}
 
+\section{Метод Якобсена} \label{sec:ch3/sect7}
+Метод Якобсена основан на определении максимума спектра на основании трех точек БПФ \cite{4205098, ericjacobsen_cite, jacobsen1994local, jacobsen2007fast}. В качестве интерполируемой функции выступает квадратичная функция, графиком которой является парабола, близкая к спектру функции исследуемого напряжения (вершина параболы и максимальное значение спектра делят графики пополам). 
+Пусть для квадратичной функции $u$ с максимальным коэффициентом функции $u(k)$  и истинным коэффициентом, достигнутым в максимуме $u(k + \delta)$. Тогда можно описать значение функции   в выбранных точках $k-1, k , k+1$ следующим образом:
+\begin{equation}
+\label{eq:equation2.7.1}
+u(k-1) = a \cdot (k-1-\delta)^2+b
+\end{equation}	
+\begin{equation}
+\label{eq:equation2.7.2}
+u(k) = a \cdot (k-\delta)^2+b
+\end{equation}	
+\begin{equation}
+\label{eq:equation2.7.3}
+u(k+1) = a \cdot (k+1-\delta)^2+b,
+\end{equation}	
+Установив параметр $k$ в \ref{eq:equation2.7.1} равным $0$, получим следующее выражение для $\delta$:
+\begin{equation}
+	\label{eq:equation2.7.4}
+	\bigtriangleup f = \frac{(|X_{k+1}|-|X_{k-1}|)}{(4|X_{k}|-2|X_{k-1}|-2|X_{k+1}|)}
+\end{equation}
 
-\section{Метод чисел Фибоначчи} \label{sec:ch3/sect7}
+Далее проведем простую адаптацию формулы \ref{eq:equation2.7.4} для возможности оценки частоты комплексных значений БПФ \cite{ericjacobsen_cite}:
+
+\begin{equation}
+\label{eq:equation2.7.5}
+\delta = Re(\dfrac{(u(k+1)-u(k-1))}{2 \cdot u(k)-u(k+1)-u(k-1)})
+\end{equation}
+
+Параметр $\delta$  определяет отклонение порядкового номера максимальной частоты, найденный с использованием БПФ, от порядкового номера истинной максимальной частоты гармоник напряжения. Для всех интерполяционных методов порядковый номер истинной максимальной частоты и частота гармоник напряжения определяются по следующим формулам:
+\begin{equation}
+	\label{eq:equation2.7.6}
+	f_{peak} = f_k + \bigtriangleup f
+\end{equation}
+\begin{equation}
+	\label{eq:equation2.7.7}
+	f_{tone} = f_{peak} \cdot \frac{f_s}{N}
+\end{equation}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=1] {Jacobsen's_method.pdf}
+	\caption{Интерполяция пиков.}
+	\label{img:picture3.7.2}
+\end{figure}
+
+\section{Метод чисел Фибоначчи} \label{sec:ch3/sect8}
 Для определения коэффициента корреляции методом корреляционных функций необходимо перебрать все наборы эталонов. Тем самым, чтобы уменьшить вычислительную сложность метода, требуется сократить операцию перебора. Для этого были использованы методы определения максимума функции по заданным точкам \cite{Maximov1982Algorithms}. 
 % Максимов Ю. А., Филлиповская Е. А. Алгоритмы решения задач нелинейного программирования //М.: МИФИ. – 1982. – Т. 52.
 
@@ -1424,7 +1474,7 @@ a = \lambda_k,
 	\label{img:picture3.7.1}
 \end{figure}
 
-\section{Модернизация метода корреляционных функций} \label{sec:ch3/sect8}
+\section{Модернизация метода корреляционных функций} \label{sec:ch3/sect9}
 Рассмотрим вывод формулы коэффициента корреляции между множеством $U$ и эталоном  $W_{ji}$. Из условия равенства двух комплексных чисел, в формуле \ref{eq:equation3.8}, амплитуды должны быть равны. Если в качестве окна выбирается симметричная функция, то функция $W(\omega)$ и множество ее значений $W_{ji}$ будут действительными. 
 Когда эталоны $W_{ji}$ формируются достаточно часто, корреляционная функция $R(\bigtriangleup r - \bigtriangleup r_j)$ определяется как сумма квадратов значений $W_{ji}$ (обозначим эту сумму как $E$). Таким образом, формулу 	\ref{eq:equation3.10} для определения модуля амплитуды $v$-й гармоники можно переписать следующим образом:
 \begin{equation}
@@ -1538,7 +1588,7 @@ phz(\delta) = \pi \cdot f + \pi \cdot k
 
 Вычислительная сложность быстрого метода корреляционных функций значительно ниже. Количество переборов быстрого метода корреляционных функций пропорционально натуральному логарифму от квадрата количества переборов метода корреляционных функций. Вычислительная сложность быстрого метода корреляционных функций равна $O(N+N\log(N))$, где $N$ – используемое число отсчетов БПФ.
 
-\section{Прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов} \label{sec:ch3/sect8}
+\section{Прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов} \label{sec:ch3/sect10}
  Метод был исследован в среде разработке JetBrains PyCharm Community Edition 2018.3.1 x64 на языке программирования Python. 
  Изначально задаем входные параметры: частоту ($harmonics$), фазу ($phases$) и амплитуду ($amplitudes$), чтобы описать модель сигнала. На рисунке \ref{img:picture3.9.3} представлен зашумляем сигнал.
  \begin{figure}[ht]
@@ -1565,7 +1615,7 @@ phz(\delta) = \pi \cdot f + \pi \cdot k
 	\caption{Спектр расширенного сигнала.}
 	\label{img:picture3.9.4}
 \end{figure}
-\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect9}
+\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect11}
 Spare FFT (SFFT, разряженное БПФ) -- алгоритм оценки спектра сигнала, содержащего малое число гармоник. В отличие от усеченного БПФ, которое находит небольшое число гармоник с заранее известным номером, SFFT находит гармоники, которые имеют более высокую амплитуду по сравнению с другими гармониками. Еще более существенное отличие SFFT от остальных БПФ заключается в том, что этот алгоритм является вероятностным и работает только для сигналов, для которых выполняются определенные условия (отсутствие в спектре большое числа гармоник с большой амплитудой, низкий уровень шума и другие).
 
 SFFT является относительно новым подходом к вычислению спектра.
@@ -1686,9 +1736,10 @@ SFFT является относительно новым подходом к в
 % Васеева Т. В., Альтман Е. А., Елизаров Д. А. Информационно-измерительная система для анализа гармоник сигнала в электрической сети //САПР и моделирование в современной электронике. – 2018. – С. 131-135.
 % DOI: 10.30987/conferencearticle_5c19e5fbf19926.94126870
 
+%Публикация в эту тематику
+% R. G. McKilliam, I. V. L. Clarkson and B. G. Quinn, "Fast Sparse Period Estimation," in IEEE Signal Processing Letters, vol. 22, no. 1, pp. 62-66, Jan. 2015, doi: 10.1109/LSP.2014.2345737.
 
-
-\section{Устройство для определения гармоник или спектра сигнала электрической сети} \label{sec:ch3/sect10}
+\section{Устройство для определения гармоник или спектра сигнала электрической сети} \label{sec:ch3/sect12}
 
 Основным направлением в применении цифровой обработки сигналов является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно 
 анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. К анализатору спектра предъявляют различные требования измерений по максимальной частоте входного сигнала. Ряд Фурье представляет разложение несинусоидальной периодической функции на синусоидальные компоненты и позволяет рассматривать сигналы из временной области в частотной \cite{information-measuring2018}.
@@ -1763,7 +1814,7 @@ $N$ – длина DFT.
 	\label{img:picture3.9.2}
 \end{figure}
 
-\section{Выводы по разделу} \label{sec:ch3/sect11}
+\section{Выводы по разделу} \label{sec:ch3/sect13}
 На основании анализа, произведенного в третьем разделе, были получены следующие результаты:
 
 \begin{enumerate}
