--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -2000,4 +2000,260 @@
   year    = {1994},
 }
 
+@Article{295186,
+  author  = {Quinn, B.G.},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Estimating frequency by interpolation using Fourier coefficients},
+  year    = {1994},
+  number  = {5},
+  pages   = {1264-1268},
+  volume  = {42},
+  doi     = {10.1109/78.295186},
+}
+
+@Article{330402,
+  author  = {Quinn, B.G. and Kootsookos, P.J.},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Threshold behavior of the maximum likelihood estimator of frequency},
+  year    = {1994},
+  number  = {11},
+  pages   = {3291-3294},
+  volume  = {42},
+  doi     = {10.1109/78.330402},
+}
+
+@Article{6874540,
+  author  = {McKilliam, R. G. and Clarkson, I. V. L. and Quinn, B. G.},
+  journal = {IEEE Signal Processing Letters},
+  title   = {Fast Sparse Period Estimation},
+  year    = {2015},
+  number  = {1},
+  pages   = {62-66},
+  volume  = {22},
+  doi     = {10.1109/LSP.2014.2345737},
+}
+
+@Online{ericjacobsen_cite,
+  title   = {Eric Jacobsen's Second Frequency Estimation Page},
+  url     = {http://www.ericjacobsen.org/fe2/fe2.htm},
+  urldate = {2021-04-28},
+}
+
+@Article{1055282,
+  author  = {Rife, D. and Boorstyn, R.},
+  journal = {IEEE Transactions on Information Theory},
+  title   = {Single tone parameter estimation from discrete-time observations},
+  year    = {1974},
+  number  = {5},
+  pages   = {591-598},
+  volume  = {20},
+  doi     = {10.1109/TIT.1974.1055282},
+}
+
+@Article{651200,
+  author  = {Macleod, M.D.},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Fast nearly ML estimation of the parameters of real or complex single tones or resolved multiple tones},
+  year    = {1998},
+  number  = {1},
+  pages   = {141-148},
+  volume  = {46},
+  doi     = {10.1109/78.651200},
+}
+
+@Article{4315077,
+  author  = {Grandke, Thomas},
+  journal = {IEEE Transactions on Instrumentation and Measurement},
+  title   = {Interpolation Algorithms for Discrete Fourier Transforms of Weighted Signals},
+  year    = {1983},
+  number  = {2},
+  pages   = {350-355},
+  volume  = {32},
+  doi     = {10.1109/TIM.1983.4315077},
+}
+
+@Article{Konopatskiy_2020,
+  author    = {E V Konopatskiy and A A Bezditnyi},
+  journal   = {Journal of Physics: Conference Series},
+  title     = {Geometric modeling of multifactor processes and phenomena by the multidimensional parabolic interpolation method},
+  year      = {2020},
+  month     = {jan},
+  pages     = {012063},
+  volume    = {1441},
+  doi       = {10.1088/1742-6596/1441/1/012063},
+  publisher = {{IOP} Publishing},
+  url       = {https://doi.org/10.1088/1742-6596/1441/1/012063},
+}
+
+@Article{LACHANCE1991143,
+  author  = {Michael A. Lachance and Arthur J. Schwartz},
+  journal = {Computer Aided Geometric Design},
+  title   = {Four point parabolic interpolation},
+  year    = {1991},
+  issn    = {0167-8396},
+  number  = {2},
+  pages   = {143-149},
+  volume  = {8},
+  doi     = {https://doi.org/10.1016/0167-8396(91)90039-E},
+  url     = {https://www.sciencedirect.com/science/article/pii/016783969190039E},
+}
+
+@InProceedings{gasior2004improving,
+  author       = {Gasior, M and Gonzalez, JL},
+  booktitle    = {AIP Conference Proceedings},
+  title        = {Improving FFT frequency measurement resolution by parabolic and Gaussian spectrum interpolation},
+  year         = {2004},
+  number       = {1},
+  organization = {American Institute of Physics},
+  pages        = {276--285},
+  volume       = {732},
+}
+
+@InProceedings{7818824,
+  author    = {Djukanović, Slobodan and Popović, Tomo and Mitrović, Andrija},
+  booktitle = {2016 24th Telecommunications Forum (TELFOR)},
+  title     = {Precise sinusoid frequency estimation based on parabolic interpolation},
+  year      = {2016},
+  pages     = {1-4},
+  doi       = {10.1109/TELFOR.2016.7818824},
+}
+
+@InProceedings{gu2005leaf,
+  author       = {Gu, Xiao and Du, Ji-Xiang and Wang, Xiao-Feng},
+  booktitle    = {International Conference on Intelligent Computing},
+  title        = {Leaf recognition based on the combination of wavelet transform and gaussian interpolation},
+  year         = {2005},
+  organization = {Springer},
+  pages        = {253--262},
+}
+
+@Article{gilboa2014image,
+  author    = {Gilboa, Elad and Cunningham, John P and Nehorai, Arye and Gruev, Viktor},
+  journal   = {Optics express},
+  title     = {Image interpolation and denoising for division of focal plane sensors using Gaussian processes},
+  year      = {2014},
+  number    = {12},
+  pages     = {15277--15291},
+  volume    = {22},
+  publisher = {Optical Society of America},
+}
+
+@Article{Altman2012promotion,
+  author    = {Альтман, Евгений Анатольевич and Елизаров, Дмитрий Александрович},
+  journal   = {Известия Транссиба},
+  title     = {Повышение точности оценки параметров сигналов в электрической сети в системе тягового электроснабжения},
+  year      = {2012},
+  number    = {3 (11)},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
+@Article{Elizarov2016analysis,
+  author    = {Елизаров, Дмитрий Александрович},
+  journal   = {Омский научный вестник},
+  title     = {Анализ методов оценки гармонических составляющих напряжения в электроэнергетических системах},
+  year      = {2016},
+  number    = {2 (146)},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
+@Article{WANG20175,
+  author  = {Zihan Wang and Aiying Yang and Peng Guo and Yueming Lu and Yaojun Qiao},
+  journal = {Optical Fiber Technology},
+  title   = {Nonlinearity-tolerant OSNR estimation method based on correlation function and statistical moments},
+  year    = {2017},
+  issn    = {1068-5200},
+  pages   = {5-11},
+  volume  = {39},
+  doi     = {https://doi.org/10.1016/j.yofte.2017.09.016},
+  url     = {https://www.sciencedirect.com/science/article/pii/S1068520017303486},
+}
+
+@Article{zhou2018improved,
+  author    = {Zhou, Shen and Shancong, Zhang},
+  journal   = {Circuits, Systems, and Signal Processing},
+  title     = {Improved frequency estimation algorithm by least squares phase unwrapping},
+  year      = {2018},
+  number    = {12},
+  pages     = {5680--5687},
+  volume    = {37},
+  publisher = {Springer},
+}
+
+@Article{1057115,
+  author  = {Tretter, S.},
+  journal = {IEEE Transactions on Information Theory},
+  title   = {Estimating the frequency of a noisy sinusoid by linear regression (Corresp.)},
+  year    = {1985},
+  number  = {6},
+  pages   = {832-835},
+  volume  = {31},
+  doi     = {10.1109/TIT.1985.1057115},
+}
+
+@Article{7456233,
+  author  = {Xu, Zhengguang and Lu, Tianqi and Huang, Benxiong},
+  journal = {IEEE Signal Processing Letters},
+  title   = {Fast Frequency Estimation Algorithm by Least Squares Phase Unwrapping},
+  year    = {2016},
+  number  = {6},
+  pages   = {776-779},
+  volume  = {23},
+  doi     = {10.1109/LSP.2016.2555933},
+}
+
+@Article{6408166,
+  author  = {Fu, Hua and Kam, Pooi-Yuen},
+  journal = {IEEE Transactions on Information Theory},
+  title   = {Phase-Based, Time-Domain Estimation of the Frequency and Phase of a Single Sinusoid in AWGN—The Role and Applications of the Additive Observation Phase Noise Model},
+  year    = {2013},
+  number  = {5},
+  pages   = {3175-3188},
+  volume  = {59},
+  doi     = {10.1109/TIT.2013.2238604},
+}
+
+@Article{xu2013robust,
+  author    = {Xu, Z and Huang, B and Xu, S},
+  journal   = {Electronics letters},
+  title     = {Robust phase unwrapping algorithm},
+  year      = {2013},
+  number    = {24},
+  pages     = {1565--1567},
+  volume    = {49},
+  publisher = {IET},
+}
+
+@Article{7152983,
+  author  = {Qian, Cheng and Huang, Lei and So, Hing Cheung and Sidiropoulos, Nicholas D. and Xie, Junhao},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Unitary PUMA Algorithm for Estimating the Frequency of a Complex Sinusoid},
+  year    = {2015},
+  number  = {20},
+  pages   = {5358-5368},
+  volume  = {63},
+  doi     = {10.1109/TSP.2015.2454471},
+}
+
+@Article{5356160,
+  author  = {So, H. C. and Chan, Frankie K. W. and Lau, W. H. and Chan, Cheung-Fat},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {An Efficient Approach for Two-Dimensional Parameter Estimation of a Single-Tone},
+  year    = {2010},
+  number  = {4},
+  pages   = {1999-2009},
+  volume  = {58},
+  doi     = {10.1109/TSP.2009.2038962},
+}
+
+@Article{haniff1991least,
+  author    = {Haniff, Christopher A},
+  journal   = {JOSA A},
+  title     = {Least-squares Fourier phase estimation from the modulo 2$\pi$ bispectrum phase},
+  year      = {1991},
+  number    = {1},
+  pages     = {134--140},
+  volume    = {8},
+  publisher = {Optical Society of America},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
