--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,31 +1,32 @@
-
 {\actuality} 
-Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численным методав оценки параметров его гармоник. 
+Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник. 
 
+Основным направлением в применении цифровой обработки сигналов (ЦОС) является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. 
 
-%В работе \cite{Increase_Accuracy_Yelizarov2014} рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. 
-%% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
-%
-%Спектральные составляющие, относящиеся к интергармоникам, обычно изменяются по амплитуде и по частоте. Интергармоники тока или напряжения являются спектральные составляющие между двумя гармоническими частотами. 
-%
-%Математической основой для анализа спектра сигналов является преобразование Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС).
-%Для дискретных сигналов применяется дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ). БПФ является оптимальным с точки зрения быстродействия алгоритмом, реализующим ДПФ. 
-%
-%С увеличением силовых электронных систем, влияние интергармоник в системе эелектроснабжения стало более ощутимым. \cite{GOST30804.4.30-2013}
-%
-%В стандарте ГОСТ~30804.4.7-2013 \cite{GOST30804.4.7-2013} определены способы образования интергармонических групп путем группирования следующих друг за другом с частотой 5 Гц спектральных составляющих в интервале частот между последовательными гармоническими составляющими
-%
-%В работе предложены рекомендации по оценки гармоник и интергармоник напряжения быстрым методом корреляционных функций. 
-%% 41.	Елизаров, Д.А. Повышение достоверности оценки показателей несинусоидальности напряжения в электроэнергетических системах / Е.А. Альтман, Д.А. Елизаров. // Приборы и методы измерений, контроля качества и диагностики в промышленности и на транспорте: Материалы Всероссийской науч.-техн. конф. с международным участием / Омский гос. техн. ун-т. Омск, 2013. С. 312-317. 
-%%
-%
+Преобразование Фурье уводит нас из временной области в частотную, и это
+влечет за собой огромное количество применений. Быстрое преобразование
+Фурье (БПФ) представляет собой алгоритм вычисления Дискретного преобразования Фурье (ДПФ). Спектр не содержит какой-либо информации о времени, а состоит из комплексных чисел (одно число для каждой синусоиды). В комплексном числе закодированы две вещи: амплитуда и угол. Спектр может содержать очень большие и  очень малые значения. Если взять логарифм этого спектра, то этот диапазон значений будет существенно сжат.
 
-%Алгоритмы оценки параметров гармоник, применяемые при работе с однональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны формулы, оценивающие дисперсии амплитуды, частоты и фазы гармоник, однако, известные методы их оценки показывают результаты выше этой границы. В том числе не достигает границы Крамера-Рао и метод корреляционного анализа, который находит гармоники по методу максимального правдоподобия. 
-%
-%
-%Корреляция может быть вычислена по алгоритмам циклической свертки, для этого необходимо прочитать один из двух сигналов в обратном порядке. Быстрый метод вычисления циклической свертки состоит в использовании теоремы о свертке и дискретного преобразования Фурье [40, 42]. Эффективные алгоритмы преобразования Фурье описаны в работах J. Cooley, S. Winograd, R. Blahut, Г. Нуссбаумера, Л. М. Гольденберга, А. Оппенгейма и других ученых. Еще один класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие. Z.J. Mou, Y. Naito, Л. Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах [47, 46, 48].
-%
-%Значительный вклад в решение вопросов по измерению показателей КЭ и определению интергармоник внесли зарубежные ученые: Arrillaga~J, Neville~R. Watson, Jos~Arrillaga, Bruce~C.~Smith, Alan~R.~Wood, S.~Chen, Yonghe~H.~Liu, Nicholas~J. Murray, C.P.~Arnold, B.J.~Harker.
+Процесс наложения окна на сигнал, представляет собой умножение неограниченной во времени функции на ограниченную весовую функцию окна. Основная цель наложения окна – получение ограниченной во времени функции, при минимальных спектральных искажениях.
+
+Классические оконные функции включают функции Ханна, Хемминга и Блэкмана.
+Оконная функция Кайзера – хорошая аппроксимация оптимального вытянутого сферического окна, концентрирующего большинство энергии в главном лепестке.
+Путем корректировки параметра $\beta$ мы можем выполнить настройку окна
+Кайзера.
+
+В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
+
+Эффективные алгоритмы преобразования Фурье описаны в работах J.~Cooley, S.~Winograd, R.~Blahut, Г.~Нуссбаумера, Л.~М.~Гольденберга, А.~Оппенгейма и другие ученые. Класс быстрых методов вычисления корреляции состоит в ее разложении на более короткие корреляции. Z.~J.~Mou, Y.~Naito, Л.~Рабинер и другие исследователи предложили и описали эти алгоритмы в своих работах \cite{MOU1987377, 550562, Rabiner1978theory}.
+
+Значительный вклад в решение вопросов по измерению оценки параметров гармоник внесли зарубежные ученые: Eric~Jacobsen's \cite{4205098, jacobsen1994local, jacobsen2007fast}, B.~G.~Quinn \cite{295186, 330402, 558515}, Cheng-I Chen, Shen Zhou, Zhang Shancong \cite{zhou2018improved}, Krzysztof Duda,  Dnyaneshwar D. Ahire, Javad Enayati, Zahra Moravej, Magnago Fernando, Reineri Claudio and Lovera Santiago, Zhengguang Xu, Tianqi Lu, and Benxiong Huang.      
+
+% B. G. Quinn, "Estimating frequency by interpolation using Fourier coefficients," in IEEE Transactions on Signal Processing, vol. 42, no. 5, pp. 1264-1268, May 1994, doi: 10.1109/78.295186.
+% B. G. Quinn and P. J. Kootsookos, "Threshold behavior of the maximum likelihood estimator of frequency," in IEEE Transactions on Signal Processing, vol. 42, no. 11, pp. 3291-3294, Nov. 1994, doi: 10.1109/78.330402.
+% B. G. Quinn, "Estimation of frequency, amplitude, and phase from the DFT of a time series," in IEEE Transactions on Signal Processing, vol. 45, no. 3, pp. 814-817, March 1997, doi: 10.1109/78.558515.
+
+% C. Chen and Y. Chen, "Comparative Study of Harmonic and Interharmonic Estimation Methods for Stationary and Time-Varying Signals," in IEEE Transactions on Industrial Electronics, vol. 61, no. 1, pp. 397-404, Jan. 2014, doi: 10.1109/TIE.2013.2242419.
+
+% Zhou S., Shancong Z. Improved frequency estimation algorithm by least squares phase unwrapping //Circuits, Systems, and Signal Processing. – 2018. – Т. 37. – №. 12. – С. 5680-5687.
 
 {\aim} данной работы является совершенствование алгоритмов оценки параметров гармоник многотонального сигнала.
 
